--- a/index.html
+++ b/index.html
@@ -1,14 +1,21 @@
 <!doctype html>
 <html>
   <head>
-    <meta charset="utf-8">
-    <meta http-equiv="X-UA-Compatible" content="chrome=1">
     <title>Yuma Informática</title>
     <link rel="stylesheet" href="stylesheets/styles.css">
-    <meta name="viewport" content="width=device-width">
-    <!--[if lt IE 9]>
-    <script src="//html5shiv.googlecode.com/svn/trunk/html5.js"></script>
-    <![endif]-->
+      <meta name="viewport" content="width=device-width, initial-scale=1">
+      <!-- Google Analytics -->
+      <script>
+        if (location.protocol !== "file:"){
+          (function(i,s,o,g,r,a,m){i['GoogleAnalyticsObject']=r;i[r]=i[r]||function(){
+          (i[r].q=i[r].q||[]).push(arguments)},i[r].l=1*new Date();a=s.createElement(o),
+          m=s.getElementsByTagName(o)[0];a.async=1;a.src=g;m.parentNode.insertBefore(a,m)
+          })(window,document,'script','//www.google-analytics.com/analytics.js','ga');
+          ga('create', 'UA-61202332-7', 'auto');
+          ga('send', 'pageview');
+        }
+      </script>
+      <!-- End Google Analytics -->
   </head>
   <body>
     <div class="wrapper">
@@ -23,6 +30,15 @@
         <p><small>Hosted on GitHub Pages &mdash; Theme by <a href="https://github.com/orderedlist">orderedlist</a></small></p>
       </footer>
     </div>
-    <script src="javascripts/scale.fix.js"></script>
+    <script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script>
+<!-- mesmerize -->
+<ins class="adsbygoogle"
+     style="display:block"
+     data-ad-client="ca-pub-9738054874581170"
+     data-ad-slot="6051521243"
+     data-ad-format="auto"></ins>
+<script>
+(adsbygoogle = window.adsbygoogle || []).push({});
+</script>
   </body>
 </html>
